changed some colors, fixed some button alignment issue, fixed the devicelist dropdown scrollbar

--- a/Client-side/src/Components/addndeleteuser/addndeleteuser.css
+++ b/Client-side/src/Components/addndeleteuser/addndeleteuser.css
@@ -111,7 +111,8 @@ body {
 }
 
 .confirm-btn:hover {
-  background-color: #18992d;
+  background-color: #B7E4BD;
+  color: black;
 }
 
 /* Cancel Button */
